completed styling and added blog posts

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<div class="ui main text container segment">
+<div class="ui main text container segment shadowed">
 
     <div class="ui huge header">New Blog</div>
 
@@ -18,7 +18,7 @@
             <textarea name="blog[body]" required></textarea>
         </div>
 
-        <input class="ui blue basic button" type="SUBMIT"> 
+        <input class="ui basic button shadowed" type="SUBMIT">
     </form>
 </div>
 
