--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-    <p>From the footer file</p>
-
+    <footer class="footer"><strong> &copy;2018 - Michael Coons </strong></footer>
 </body>
+
 </html>
