--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,3 +1,10 @@
+body{
+    background-image: url("../index.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 i.icon{
     font-size: 2em;
 }
@@ -8,4 +15,31 @@ i.icon{
 
 #delete {
     display: inline;
+}
+
+.footer{
+    background-color:black;
+    color: white;
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    text-align: center;
+}
+
+.image img, .item img{
+    border: 1px solid black;
+    padding: 5px;
+}
+
+.meta{
+    padding: 5px;
+}
+
+.shadowed{
+    box-shadow: 3px 3px 6px black !important;
+}
+
+.content {
+    margin-top: 5px !important;
 }
