--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,23 +2,25 @@
 
 <div class="ui main text container segment">
 
-    <div class="ui huge header">Edit <%= blog.title %></div>
+    <div class="ui huge header">Edit
+        <%= blog.title %>
+    </div>
 
     <form class="ui form" action="/blogs/<%= blog._id %>?_method=PUT" method="POST">
         <div class="field">
             <label>Title</label>
-            <input type="text" name="blog[title]" value = "<%= blog.title %>"  required>
+            <input type="text" name="blog[title]" value="<%= blog.title %>" required>
         </div>
         <div class="field">
             <label>Image</label>
-            <input type="text" name="blog[image]" value = "<%= blog.image %>" placeholder="image" required>
+            <input type="text" name="blog[image]" value="<%= blog.image %>" placeholder="image" required>
         </div>
         <div class="field">
             <label>Blog Content</label>
             <textarea name="blog[body]" required> <%= blog.body %>   </textarea>
         </div>
 
-        <input class="ui blue basic button" type="SUBMIT"> 
+        <input class="ui basic button shadowed" type="SUBMIT">
     </form>
 </div>
 
