--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css">
     <link rel="stylesheet" href="/stylesheets/app.css">
 </head>
+
 <body>
     <div class="ui fixed inverted menu">
         <div class="ui container">
-            <div class="header item"><i class="code icon"></i> Blog Site</div>
+            <div class="header item"><i class="code icon"></i>Michael's Photo Blog</div>
             <a href='/' class="item">Home</a>
             <a href='/blogs/new' class='item'>New Post</a>
         </div>
