--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,11 +1,11 @@
 <% include ./partials/header %>
 
-<div class="ui main text container segment">
+<div class="ui main text container segment shadowed">
 
     <div class="ui huge header"><%= blog.title %></div>
     <div class="ui top attached>   
         <div class="item"> 
-            <img class="ui centered rounded image" src="<%= blog.image %>" alt="">
+            <img class="ui centered rounded image shadowed" src="<%= blog.image %>" alt="">
             <div class="content">
                 <span><%= blog.created.toDateString() %></span>
 
@@ -15,9 +15,9 @@
                     <p><%- blog.body %></p> 
 
             </div>
-            <a class="ui orange basic button" href="/blogs/<%=blog._id %>/edit">EDIT</a>
+            <a class="ui basic button shadowed" href="/blogs/<%=blog._id %>/edit">EDIT</a>
             <form id="delete" method="POST" action="/blogs/<%=blog._id %>?_method=DELETE">
-                <button class="ui red basic button">
+                <button class="ui basic button shadowed">
                     DELETE
                 </button>
 
