updated styling, aded about page and preparing to publish

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,12 +8,16 @@
     <title>Blog App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css">
     <link rel="stylesheet" href="/stylesheets/app.css">
+    <meta property='og:title' content='Photo Blog'/>
+    <meta property='og:image' content='/thumb.png'/>
+    <meta property='og:description' content='Photo Blogging App'/>
+    <meta property='og:url' content=''/>
 </head>
 
 <body>
     <div class="ui fixed inverted menu">
         <div class="ui container">
-            <div class="header item"><i class="code icon"></i>Michael's Photo Blog</div>
+            <div class="header item"><i class="camera retro icon"></i>Michael's Photo Blog</div>
             <a href='/' class="item">Home</a>
             <a href='/blogs/new' class='item'>New Post</a>
         </div>
