--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,12 @@
 <% include ./partials/header   %>
 
-<p>This is a server side rendered app. It is written in Express and EJS.  It uses MongoDB as the database.</p>
-<p>It is published at Heroku.</p>
+<div class="ui main text container segment">
+    <div class="ui huge container header">About</div>
+    <div class="ui top attached segment shadowed">
+        <p>This is a server side rendered app. It is written in Express and EJS.  It uses MongoDB as the database.</p>
+        <p>It is published at Heroku.</p>
 
-
+    </div>
+</div>
+<br><br><br>
 <% include ./partials/footer   %>
