--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -20,8 +20,8 @@
             <textarea name="blog[body]" required> <%= blog.body %>   </textarea>
         </div>
 
-        <input class="ui basic button shadowed" type="SUBMIT">
+        <input class="ui floated basic greenbutton shadowed" type="SUBMIT">
     </form>
 </div>
-
+<br><br><br>
 <% include ./partials/footer %>
