--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,5 +20,6 @@
             <div class="header item"><i class="camera retro icon"></i>Michael's Photo Blog</div>
             <a href='/' class="item">Home</a>
             <a href='/blogs/new' class='item'>New Post</a>
+            <a href='/blogs/about' class='item'>About</a>
         </div>
     </div>
