--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header   %>
 
-<div class="ui main text container">
-    <div class="ui huge container">Index</div>
+<div class="ui main text container segment">
+    <div class="ui huge container header">Blog Index</div>
     <div class="ui top attached segment shadowed">
         <div class="ui divided items">
             <% blogs.forEach(blog =>{ %>
@@ -21,7 +21,7 @@
                         </div>
                         <div class="extra">
                             <!-- <a class="ui floated basic green button shadowed" href="/blogs/<%= blog._id %>">Read More<i class="right chevron icon"></i></a> -->
-                            <a class="ui basic button shadowed" href="/blogs/<%= blog._id %>">Read More<i class="right chevron icon"></i></a>
+                            <a class="ui floated basic greenbutton shadowed" href="/blogs/<%= blog._id %>">Read More</i></a>
                         </div>
 
                     </div>
@@ -31,5 +31,5 @@
         </div>
     </div>
 </div>
-
+<br><br><br>
 <% include ./partials/footer   %>
