--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,8 +18,8 @@
             <textarea name="blog[body]" required></textarea>
         </div>
 
-        <input class="ui basic button shadowed" type="SUBMIT">
+        <input class="ui floated basic greenbutton shadowed" type="SUBMIT">
     </form>
 </div>
-
+<br><br><br>
 <% include ./partials/footer %>
